@@ -4338,8 +4338,6 @@ public class MainEditorFrame extends JFrame {
       affinePreserveZButton.setFont(Prefs.getPrefs().getFont("Dialog", Font.BOLD, 10));
       affinePreserveZButton.setBounds(218, 155, 104, 24);
       tinaAffineTransformationPanel.add(affinePreserveZButton);
-      // tinaAffineTransformationPanel.add(new JToggleButton("whatever"));
-      tinaAffineTransformationPanel.add(this.getAffineMirrorPrePostTranslationsButton(), null);
 
       affineRotateEditMotionCurveBtn = new JButton();
       affineRotateEditMotionCurveBtn.addActionListener(new ActionListener() {
@@ -6715,8 +6713,7 @@ public class MainEditorFrame extends JFrame {
         getMouseTransformSlowButton(), getRootPanel(), getAffineFlipHorizontalButton(), getAffineFlipVerticalButton(),
         getPostBlurRadiusREd(), getPostBlurRadiusSlider(), getPostBlurFadeREd(), getPostBlurFadeSlider(), getPostBlurFallOffREd(), getPostBlurFallOffSlider(),
         getAffineScaleXButton(), getAffineScaleYButton(), gradientLibraryThumbnailPnl,
-        getToggleVariationsButton(), getToggleTransparencyButton(), getAffinePreserveZButton(), getAffineMirrorPrePostTranslationsButton(),
-        getQualityProfileCmb(), getResolutionProfileCmb(),
+        getToggleVariationsButton(), getToggleTransparencyButton(), getAffinePreserveZButton(), getQualityProfileCmb(), getResolutionProfileCmb(),
         interactiveRendererFrame.getInteractiveResolutionProfileCmb(), getTinaRenderFlameButton(), getRenderMainButton(), getTinaAppendToMovieButton(),
         getTransformationWeightREd(), getUndoButton(), getRedoButton(),
         getXFormAntialiasAmountREd(), getXFormAntialiasAmountSlider(), getXFormAntialiasRadiusREd(), getXFormAntialiasRadiusSlider(),
@@ -9486,28 +9483,6 @@ public class MainEditorFrame extends JFrame {
       });
     }
     return affineResetTransformButton;
-  }
-
-  private boolean defaultMirrorPrePostTranslations = false;
-  private JToggleButton affineMirrorPrePostTranslationsButton;
-
-  private JToggleButton getAffineMirrorPrePostTranslationsButton() {
-    if (affineMirrorPrePostTranslationsButton == null) {
-      affineMirrorPrePostTranslationsButton = new JToggleButton();
-      affineMirrorPrePostTranslationsButton.setSelected(defaultMirrorPrePostTranslations);
-      affineMirrorPrePostTranslationsButton.setPreferredSize(new Dimension(136, 24));
-      affineMirrorPrePostTranslationsButton.setText("Mirror translations");
-      affineMirrorPrePostTranslationsButton.setLocation(new Point(109, 185));
-      affineMirrorPrePostTranslationsButton.setSize(new Dimension(104, 24));
-      affineMirrorPrePostTranslationsButton.setToolTipText("EXPERIMENTAL: Mirror pre- and post- translations (post reverses pre)");
-      affineMirrorPrePostTranslationsButton.setFont(Prefs.getPrefs().getFont("Dialog", Font.BOLD, 10));
-      affineMirrorPrePostTranslationsButton.addActionListener(new java.awt.event.ActionListener() {
-        public void actionPerformed(java.awt.event.ActionEvent e) {
-          tinaController.affineMirrorPrePostChanged(affineMirrorPrePostTranslationsButton.isSelected());
-        }
-      });
-    }
-    return affineMirrorPrePostTranslationsButton;
   }
 
   /**
